--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Bookstore</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- cordova.js required for cordova apps -->
+  <!-- <script src="http://maps.google.com/maps/api/js?v=3&key=AIzaSyAITgv8PO6ydsCtwzW15LcLIxuS7exJbcw"></script> -->
+
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyC-zT0LOvPe_inhiHj3RgBRxaUpElTGCp4&libraries=places"></script>
+
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
@@ -26,6 +34,7 @@
   <link href="build/main.css" rel="stylesheet">
 
 </head>
+
 <body>
 
   <!-- Ionic's root component and where the app will load -->
@@ -42,4 +51,5 @@
   <script src="build/main.js"></script>
 
 </body>
+
 </html>
